# core-foundation-rs

./: .gitignore  .travis.yml  .typos.toml  Cargo.toml  Makefile  Makefile.in  README.md  appkit.rs  array.rs  base.rs  boolean.rs  cg.rs  clippy.toml  cocoa.rc  cocoa.rs  configure  core_foundation.rc  core_graphics.rc  core_text.rc  data.rs  data_provider.rs  dictionary.rs  font.rs  font_collection.rs  font_descriptor.rs  font_manager.rs  foundation.rs  geometry.rs  info.mm  io_surface.rc  io_surface.rs  lib.rs  makefile.msgsend  msgsend.c  msgsend.m  number.rs  set.rs  string.rs  test.rs  url.rs
.github/workflows/: rust.yml
cocoa/: Cargo.toml  README.md
cocoa-foundation/: .gitignore  Cargo.toml
cocoa-foundation/src/: base.rs  foundation.rs  lib.rs
cocoa-foundation/tests/: foundation.rs
cocoa/examples/: color.rs  fullscreen.rs  hello_world.rs  nsvisualeffectview_blur.rs  tab_view.rs
cocoa/src/: appkit.rs  base.rs  foundation.rs  lib.rs  macros.rs  quartzcore.rs
cocoa/tests/: foundation.rs
core-foundation/: Cargo.toml
core-foundation-sys/: Cargo.toml  build.rs
core-foundation-sys/src/: allocator.rs  array.rs  attributed_string.rs  bag.rs  base.rs  binary_heap.rs  bit_vector.rs  boolean.rs  bundle.rs  calendar.rs  characterset.rs  data.rs  date.rs  date_formatter.rs  dictionary.rs  error.rs  file_security.rs  filedescriptor.rs  lib.rs  locale.rs  mach_port.rs  messageport.rs  notification_center.rs  null.rs  number.rs  number_formatter.rs  plugin.rs  preferences.rs  propertylist.rs  runloop.rs  set.rs  socket.rs  stream.rs  string.rs  string_tokenizer.rs  sync.rs  time.rs  timezone.rs  tree.rs  url.rs  (+6 more)
core-foundation/src/: array.rs  attributed_string.rs  base.rs  boolean.rs  bundle.rs  characterset.rs  data.rs  date.rs  dictionary.rs  error.rs  filedescriptor.rs  lib.rs  mach_port.rs  number.rs  propertylist.rs  runloop.rs  set.rs  string.rs  time.rs  timezone.rs  url.rs  uuid.rs
core-foundation/tests/: use_macro_outside_crate.rs
core-graphics/: Cargo.toml  README.md
core-graphics-types/: Cargo.toml
core-graphics-types/src/: base.rs  geometry.rs  lib.rs
core-graphics/src/: access.rs  base.rs  color.rs  color_space.rs  context.rs  data_provider.rs  display.rs  event.rs  event_source.rs  font.rs  geometry.rs  gradient.rs  image.rs  lib.rs  path.rs  private.rs  sys.rs  window.rs
core-text/: .travis.yml  Cargo.toml  README.md
core-text/src/: font.rs  font_collection.rs  font_descriptor.rs  font_manager.rs  frame.rs  framesetter.rs  lib.rs  line.rs  run.rs  string_attributes.rs  typesetter.rs
examples/: hello_world.rs  tab_view.rs
io-surface/: .travis.yml  Cargo.toml
io-surface/src/: lib.rs
src/: appkit.rs  array.rs  base.rs  boolean.rs  bundle.rs  color_space.rs  context.rs  data.rs  data_provider.rs  date.rs  dictionary.rs  display.rs  event.rs  event_source.rs  font.rs  font_collection.rs  font_descriptor.rs  foundation.rs  geometry.rs  image.rs  lib.rs  msgsend.m  number.rs  private.rs  runloop.rs  set.rs  string.rs  sys.rs  url.rs
tests/: foundation.rs
