[package]
name = "core-graphics"
description = "Bindings to Core Graphics for OS X"
homepage = "https://github.com/servo/core-graphics-rs"
repository = "https://github.com/servo/core-graphics-rs"
version = "0.12.3"
authors = ["The Servo Project Developers"]
license = "MIT / Apache-2.0"

[features]
default = []
elcapitan = []

[dependencies]
bitflags = "1.0"
core-foundation = "0.4"
foreign-types = "0.3.0"
libc = "0.2"
