[workspace]
members = ["core-foundation", "core-foundation-sys", "core-graphics-types", "core-graphics", "core-text", "cocoa", "cocoa-foundation", "io-surface"]
resolver = "2"

[workspace.package]
authors = ["The Servo Project Developers"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/servo/core-foundation-rs"
rust-version = "1.65"

[workspace.lints]
clippy.doc_markdown = "warn"

# TODO: Remove most of these by fixing the actual issues.
clippy.assertions_on_constants = "allow"
clippy.len_without_is_empty = "allow"
clippy.manual_range_contains = "allow"
clippy.missing_safety_doc = "allow"
clippy.new_ret_no_self = "allow"
clippy.new_without_default = "allow"
clippy.non_canonical_partial_ord_impl = "allow"
clippy.not_unsafe_ptr_arg_deref = "allow"
clippy.result_unit_err = "allow"
clippy.too_many_arguments = "allow"
clippy.type_complexity = "allow"

[workspace.dependencies]
cocoa-foundation = { default-features = false, path = "cocoa-foundation", version = "0.2" }
core-foundation = { default-features = false, path = "core-foundation", version = "0.10" }
core-foundation-sys = { default-features = false, path = "core-foundation-sys", version = "0.8" }
core-graphics = { default-features = false, path = "core-graphics", version = "0.24" }
core-graphics-types = { default-features = false, path = "core-graphics-types", version = "0.2" }
