
[package]
name = "cocoa-foundation"
description = "Bindings to Cocoa Foundation for macOS"
homepage = "https://github.com/servo/core-foundation-rs"
repository = "https://github.com/servo/core-foundation-rs"
version = "0.1.1"
authors = ["The Servo Project Developers"]
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"

[dependencies]
block = { version = "=0.2.0-alpha.6", package = "block2" }
bitflags = "1.0"
libc = "0.2"
core-foundation = { path = "../core-foundation", version = "0.9" }
core-graphics-types = { path = "../core-graphics-types", version = "0.1" }
objc2 = { version = "=0.3.0-beta.2" }
objc2-encode = { version = "=2.0.0-pre.2" }
