[package]
name = "cocoa-foundation"
description = "Bindings to Cocoa Foundation for macOS"
version = "0.2.1"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"

[lints]
workspace = true

[dependencies]
core-foundation.workspace = true
core-graphics-types.workspace = true

bitflags = "2"
block = "0.1"
objc = "0.2.3"

[features]
default = ["link"]
# Disable to manually link. Enabled by default.
link = ["core-foundation/link", "core-graphics-types/link"]
