[package]
name = "cocoa"
description = "Bindings to Cocoa for macOS"
version = "0.26.1"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"

[lints]
workspace = true

[dependencies]
cocoa-foundation.workspace = true
core-foundation.workspace = true
core-graphics.workspace = true

bitflags = "2"
block = "0.1"
foreign-types = "0.5"
libc = "0.2"
objc = "0.2.3"

[features]
default = ["link"]
# Disable to manually link. Enabled by default.
link = ["core-foundation/link", "cocoa-foundation/link", "core-graphics/link"]
