[package]
name = "core-foundation-sys"
description = "Bindings to Core Foundation for macOS"
homepage = "https://github.com/servo/core-foundation-rs"
repository = "https://github.com/servo/core-foundation-rs"
version = "0.8.6"
authors = ["The Servo Project Developers"]
license = "MIT OR Apache-2.0"

[features]
mac_os_10_7_support = [] # backwards compatibility
mac_os_10_8_features = [] # enables new features

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-apple-darwin"
