[package]
name = "core-foundation-sys"
description = "Bindings to Core Foundation for macOS"
version = "0.8.7"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-apple-darwin"

[dependencies]

[features]
default = ["link"]
mac_os_10_7_support = [] # backwards compatibility
mac_os_10_8_features = [] # enables new features
# Disable to manually link. Enabled by default.
link = []
