[package]
name = "core-foundation"
description = "Bindings to Core Foundation for OS X"
homepage = "https://github.com/servo/core-foundation-rs"
repository = "https://github.com/servo/core-foundation-rs"
version = "0.4.4"
authors = ["The Servo Project Developers"]
license = "MIT / Apache-2.0"

[dependencies.core-foundation-sys]
path = "../core-foundation-sys"
version = "0.4.4"

[dependencies]
libc = "0.2"

[features]
mac_os_10_7_support = ["core-foundation-sys/mac_os_10_7_support"] # backwards compatibility
mac_os_10_8_features = ["core-foundation-sys/mac_os_10_8_features"] # enables new features
