[package]
name = "core-foundation"
description = "Bindings to Core Foundation for macOS"
homepage = "https://github.com/servo/core-foundation-rs"
repository = "https://github.com/servo/core-foundation-rs"
version = "0.9.4"
authors = ["The Servo Project Developers"]
license = "MIT / Apache-2.0"
categories = ["os::macos-apis"]
keywords = ["macos", "framework", "objc"]

[dependencies.core-foundation-sys]
path = "../core-foundation-sys"
version = "0.8.4"

[dependencies]
chrono = { version = "0.4", optional = true }
uuid = { version = "0.5", optional = true }
libc = { version = "0.2", optional = true }

[features]
default = ["libc"]
mac_os_10_7_support = ["core-foundation-sys/mac_os_10_7_support"] # backwards compatibility
mac_os_10_8_features = ["core-foundation-sys/mac_os_10_8_features"] # enables new features
with-chrono = ["chrono"]
with-uuid = ["uuid"]

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
