[package]
name = "core-graphics-types"
description = "Bindings for some fundamental Core Graphics types"
homepage = "https://github.com/servo/core-foundation-rs"
repository = "https://github.com/servo/core-foundation-rs"
version = "0.1.2"
authors = ["The Servo Project Developers"]
license = "MIT OR Apache-2.0"

[dependencies]
bitflags = "1.0"
core-foundation = { path = "../core-foundation", version = "0.9" }
libc = "0.2"
objc-encode = { version = "=2.0.0-pre.1", package = "objc2-encode" }

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
