[package]
name = "core-graphics-helmer-fork"
description = "Fork of core-graphics maintained by helmer team"
homepage = "https://github.com/servo/core-foundation-rs"
repository = "https://github.com/servo/core-foundation-rs"
version = "0.24.0"
authors = ["The Servo Project Developers", "Pranav2612000"]
license = "MIT OR Apache-2.0"
edition = "2018"

[features]
default = ["link"]
elcapitan = []
highsierra = []
# Disable to manually link. Enabled by default.
link = ["core-foundation/link", "core-graphics-types/link"]

[dependencies]
bitflags = "2"
core-foundation = { default-features = false, path = "../core-foundation", version = "0.9.4" }
core-graphics-types = { default-features = false, path = "../core-graphics-types", version = "0.1.3" }
foreign-types = "0.5.0"
libc = "0.2"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-apple-darwin"
