[package]
name = "core-graphics"
description = "Bindings to Core Graphics for macOS"
version = "0.25.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-apple-darwin"

[lints]
workspace = true

[dependencies]
core-foundation.workspace = true
core-graphics-types.workspace = true

bitflags = "2"
foreign-types = "0.5.0"
libc = "0.2"

[features]
default = ["link"]
elcapitan = []
highsierra = []
catalina = []
# Disable to manually link. Enabled by default.
link = ["core-foundation/link", "core-graphics-types/link"]
