[package]
name = "core-text"
version = "21.0.0"
description = "Bindings to the Core Text framework."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-apple-darwin"

[dependencies]
core-foundation.workspace = true
core-graphics.workspace = true

foreign-types = "0.5"

[features]
default = ["mountainlion", "link"]
# For OS X 10.7 compat, exclude this feature. It will exclude some things from
# the exposed APIs in the crate.
mountainlion = []
# Disable to manually link. Enabled by default.
link = ["core-foundation/link", "core-graphics/link"]
